Added ignore file and fixed driver cmake lists

--- a/src/drivers/CMakeLists.txt
+++ b/src/drivers/CMakeLists.txt
@@ -1,9 +1,9 @@
-blt_add_executable( NAME flobat
-                    SOURCES flobat.cpp
+blt_add_executable( NAME serac
+                    SOURCES serac.cpp
                     DEPENDS_ON mpi mfem hypre blas lapack parmetis
                     metis solvers coefficients
                     )
 
-install( TARGETS flobat
+install( TARGETS serac
          RUNTIME DESTINATION bin
          )
