--- a/src/coefficients/CMakeLists.txt
+++ b/src/coefficients/CMakeLists.txt
@@ -1,16 +1,16 @@
 set(coefficients_sources
-    flobat_scalar_coefficient.cpp
+    loading_functions.cpp
     )
 
 set(coefficients_headers
-    flobat_scalar_coefficient.hpp
+    loading_functions.hpp
     )
 
 blt_add_library(
     NAME        coefficients
     SOURCES     ${coefficients_sources}
     HEADERS     ${coefficients_headers}
-    DEPENDS_ON  mpi mfem hypre blas lapack parmetis metis models
+    DEPENDS_ON  mpi mfem hypre blas lapack parmetis metis
     )
 
 target_include_directories(coefficients PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
