--- a/src/drivers/CMakeLists.txt
+++ b/src/drivers/CMakeLists.txt
@@ -1,7 +1,7 @@
 blt_add_executable( NAME serac
                     SOURCES serac.cpp
-                    DEPENDS_ON mpi mfem hypre blas lapack parmetis
-                    metis solvers coefficients
+                    DEPENDS_ON mpi mfem hypre blas lapack 
+                    solvers coefficients
                     )
 
 install( TARGETS serac
