--- a/src/integrators/CMakeLists.txt
+++ b/src/integrators/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(integrators_sources
     hyperelastic_traction_integrator.cpp
+    inc_hyperelastic_integrator.cpp    
     )
 
 set(integrators_headers
     hyperelastic_traction_integrator.hpp
+    inc_hyperelastic_integrator.hpp    
     )
 
 blt_add_library(
