--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ variables:
   BUILD_QUARTZ_ALLOC_NAME: umpire_ci_$CI_COMMIT_SHORT_SHA
   BUILD_ROOT: $CI_BUILDS_DIR/umpire_$CI_COMMIT_REF_SLUG
   INSTALL_ROOT: $CI_BUILDS_DIR/spack_uberenv
+  SPACK_UPSTREAM: /usr/workspace/radiuss/spack-chain-parent/opt/spack
 
 before_script:
   - date
@@ -28,7 +29,7 @@ stages:
     - echo ${BUILD_QUARTZ_ALLOC_NAME}
     - export JOBID=$(squeue -h --name=${BUILD_QUARTZ_ALLOC_NAME} --format=%A)
     - echo ${JOBID}
-    - srun $( [[ -n "${JOBID}" ]] && echo "--jobid=${JOBID}" ) -t 20 -N 1 -n 1 -c 4 python scripts/uberenv/uberenv.py --prefix=${INSTALL_ROOT}_${SPEC} --spec=${SPEC}
+    - srun $( [[ -n "${JOBID}" ]] && echo "--jobid=${JOBID}" ) -t 20 -N 1 -n 1 -c 4 python scripts/uberenv/uberenv.py --prefix=${INSTALL_ROOT}_${COMPILER} --spec=${SPEC} --upstream=${SPACK_UPSTREAM}
 
 # This is not a job, but contains project specific build commands
 # If an allocation exist with the name defined in this pipeline, the job will use it
@@ -37,7 +38,7 @@ stages:
     - echo ${BUILD_QUARTZ_ALLOC_NAME}
     - export JOBID=$(squeue -h --name=${BUILD_QUARTZ_ALLOC_NAME} --format=%A)
     - echo ${JOBID}
-    - srun $( [[ -n "${JOBID}" ]] && echo "--jobid=${JOBID}" ) -t 5 -N 1 -n 1 -c 4 scripts/gitlab/build.sh --build-only
+    - srun $( [[ -n "${JOBID}" ]] && echo "--jobid=${JOBID}" ) -t 5 -N 1 -n 1 -c 4 scripts/gitlab/build_and_test.sh --build-only
 
 # This is not a job, but contains project specific build commands
 .test_toss_3_x86_64_ib_script:
@@ -45,7 +46,7 @@ stages:
     - echo ${BUILD_QUARTZ_ALLOC_NAME}
     - export JOBID=$(squeue -h --name=${BUILD_QUARTZ_ALLOC_NAME} --format=%A)
     - echo ${JOBID}
-    - srun $( [[ -n "${JOBID}" ]] && echo "--jobid=${JOBID}" ) -t 5 -N 1 -n 1 -c 4 scripts/gitlab/build.sh --test-only
+    - srun $( [[ -n "${JOBID}" ]] && echo "--jobid=${JOBID}" ) -t 5 -N 1 -n 1 -c 4 scripts/gitlab/build_and_test.sh --test-only
   after_script:
     - scripts/gitlab/after_test.sh
   artifacts:
@@ -55,7 +56,7 @@ stages:
 # Butte uses a very different job allocation system, building on login nodes is recommended
 .build_blueos_3_ppc64le_ib_script:
   script:
-    - lalloc 1 scripts/gitlab/build.sh
+    - lalloc 1 scripts/gitlab/build_and_test.sh
 
 .build_blueos_3_ppc64le_ib_p9_script:
   extends: .build_blueos_3_ppc64le_ib_script
