--- a/.gitlab/ci/build_quartz.yml
+++ b/.gitlab/ci/build_quartz.yml
@@ -84,11 +84,12 @@ dependencies_quartz_gcc_8_1_0:
     SPEC: "%gcc@8.1.0"
   extends: .dependencies_quartz
 
-dependencies_quartz_intel_16_0_4:
-  variables:
-    COMPILER: "intel_16_0_4"
-    SPEC: "%intel@16.0.4"
-  extends: .dependencies_quartz
+#dependencies_quartz_intel_16_0_4:
+#  variables:
+#    COMPILER: "intel_16_0_4"
+#    SPEC: "%intel@16.0.4"
+#  extends: .dependencies_quartz
+#  allow_failure: true
 
 dependencies_quartz_intel_18_0_2:
   variables:
@@ -100,35 +101,42 @@ dependencies_quartz_intel_18_0_2:
 # Here are all quartz build jobs
 
 build_quartz_clang_3_9_1:
+  needs: ["dependencies_quartz_clang_3_9_1"]
   variables:
     COMPILER: "clang_3_9_1"
     SPEC: "%clang@3.9.1"
   extends: .build_quartz
+  allow_failure: true
 
 build_quartz_clang_4_0_0:
+  needs: ["dependencies_quartz_clang_4_0_0"]
   variables:
     COMPILER: "clang_4_0_0"
     SPEC: "%clang@4.0.0"
   extends: .build_quartz
+  allow_failure: true
 
 build_quartz_gcc_7_3_0:
+  needs: ["dependencies_quartz_gcc_7_3_0"]
   variables:
     COMPILER: "gcc_7_3_0"
     SPEC: "%gcc@7.3.0"
   extends: .build_quartz
 
 build_quartz_gcc_8_1_0:
+  needs: ["dependencies_quartz_gcc_8_1_0"]
   variables:
     COMPILER: "gcc_8_1_0"
     SPEC: "%gcc@8.1.0"
   extends: .build_quartz
 
-build_quartz_intel_16_0_4:
-  variables:
-    COMPILER: "intel_16_0_4"
-  extends: .build_quartz
+#build_quartz_intel_16_0_4:
+#  variables:
+#    COMPILER: "intel_16_0_4"
+#  extends: .build_quartz
 
 build_quartz_intel_18_0_2:
+  needs: ["dependencies_quartz_intel_18_0_2"]
   variables:
     COMPILER: "intel_18_0_2"
     SPEC: "%intel@18.0.2"
