--- a/scripts/uberenv/spack_configs/toss_3_x86_64_ib/compilers.yaml
+++ b/scripts/uberenv/spack_configs/toss_3_x86_64_ib/compilers.yaml
@@ -4,39 +4,82 @@ compilers:
     extra_rpaths: []
     flags: {}
     modules:
-    - gcc/4.9.3
+    - clang/3.9.0
     operating_system: rhel7
     paths:
-      cc:  /usr/tce/packages/gcc/gcc-4.9.3/bin/gcc
-      cxx: /usr/tce/packages/gcc/gcc-4.9.3/bin/g++
-      f77: /usr/tce/packages/gcc/gcc-4.9.3/bin/gfortran
-      fc:  /usr/tce/packages/gcc/gcc-4.9.3/bin/gfortran
-    spec: gcc@4.9.3
+      cc: /usr/tce/packages/clang/clang-3.9.0/bin/clang
+      cxx: /usr/tce/packages/clang/clang-3.9.0/bin/clang++
+      f77: null
+      fc: null
+    spec: clang@3.9.0
     target: x86_64
 - compiler:
     environment: {}
     extra_rpaths: []
     flags: {}
-    modules: []
+    modules:
+    - clang/4.0.0
     operating_system: rhel7
     paths:
-      cc: /usr/tce/packages/intel/intel-17.0.0/bin/icc
-      cxx: /usr/tce/packages/intel/intel-17.0.0/bin/icpc
-      f77: /usr/tce/packages/intel/intel-17.0.0/bin/ifort
-      fc: /usr/tce/packages/intel/intel-17.0.0/bin/ifort
-    spec: intel@17.0.0
-    target: x86_64
-- compiler:
-    environment: {}
-    extra_rpaths: []
-    flags: {}
-    modules: []
-    operating_system: rhel7
-    paths:
-      cc:  /usr/tce/packages/clang/clang-4.0.0/bin/clang
+      cc: /usr/tce/packages/clang/clang-4.0.0/bin/clang
       cxx: /usr/tce/packages/clang/clang-4.0.0/bin/clang++
-      f77: None
-      fc:  None
+      f77: null
+      fc: null
     spec: clang@4.0.0
     target: x86_64
-
+- compiler:
+    environment: {}
+    extra_rpaths: []
+    flags: {}
+    modules:
+    - gcc/7.3.0
+    operating_system: rhel7
+    paths:
+      cc: /usr/tce/packages/gcc/gcc-7.3.0/bin/gcc
+      cxx: /usr/tce/packages/gcc/gcc-7.3.0/bin/g++
+      f77: /usr/tce/packages/gcc/gcc-7.3.0/bin/gfortran
+      fc: /usr/tce/packages/gcc/gcc-7.3.0/bin/gfortran
+    spec: gcc@7.3.0
+    target: x86_64
+- compiler:
+    environment: {}
+    extra_rpaths: []
+    flags: {}
+    modules:
+    - gcc/8.1.0
+    operating_system: rhel7
+    paths:
+      cc: /usr/tce/packages/gcc/gcc-8.1.0/bin/gcc
+      cxx: /usr/tce/packages/gcc/gcc-8.1.0/bin/g++
+      f77: /usr/tce/packages/gcc/gcc-8.1.0/bin/gfortran
+      fc: /usr/tce/packages/gcc/gcc-8.1.0/bin/gfortran
+    spec: gcc@8.1.0
+    target: x86_64
+- compiler:
+    environment: {}
+    extra_rpaths: []
+    flags: {}
+    modules:
+    - intel/16.0.4
+    operating_system: rhel7
+    paths:
+      cc: /usr/tce/packages/intel/intel-16.0.4/bin/icc
+      cxx: /usr/tce/packages/intel/intel-16.0.4/bin/icpc
+      f77: /usr/tce/packages/intel/intel-16.0.4/bin/ifort
+      fc: /usr/tce/packages/intel/intel-16.0.4/bin/ifort
+    spec: intel@16.0.4
+    target: x86_64
+- compiler:
+    environment: {}
+    extra_rpaths: []
+    flags: {}
+    modules:
+    - intel/18.0.2
+    operating_system: rhel7
+    paths:
+      cc: /usr/tce/packages/intel/intel-18.0.2/bin/icc
+      cxx: /usr/tce/packages/intel/intel-18.0.2/bin/icpc
+      f77: /usr/tce/packages/intel/intel-18.0.2/bin/ifort
+      fc: /usr/tce/packages/intel/intel-18.0.2/bin/ifort
+    spec: intel@18.0.2
+    target: x86_64
