--- a/scripts/uberenv/spack_configs/toss_3_x86_64_ib/packages.yaml
+++ b/scripts/uberenv/spack_configs/toss_3_x86_64_ib/packages.yaml
@@ -1,65 +1,26 @@
-
-# -------------------------------------------------------------------------
-# This file controls default concretization preferences for Spack.
-#
-# Settings here are versioned with Spack and are intended to provide
-# sensible defaults out of the box. Spack maintainers should edit this
-# file to keep it current.
-#
-# Users can override these settings by editing the following files.
-#
-# Per-spack-instance settings (overrides defaults):
-#   $SPACK_ROOT/etc/spack/packages.yaml
-#
-# Per-user settings (overrides default and site settings):
-#   ~/.spack/packages.yaml
-# -------------------------------------------------------------------------
 packages:
   all:
     compiler: [gcc, intel, pgi, clang, xl, nag]
     providers:
-      awk: [gawk]
       blas: [openblas]
-      daal: [intel-daal]
-      elf: [elfutils]
-      golang: [gcc]
-      ipp: [intel-ipp]
-      java: [jdk]
       lapack: [openblas]
-      mkl: [intel-mkl]
-      mpe: [mpe2]
       mpi: [mvapich2]
-      opencl: [pocl]
-      openfoam: [openfoam-com, openfoam-org, foam-extend]
-      pil: [py-pillow]
-      scalapack: [netlib-scalapack]
-      szip: [libszip, libaec]
-      tbb: [intel-tbb]
-      jpeg: [libjpeg-turbo, libjpeg]
-  conduit:
-    version: [master]
-  python:
-    variants: ~dbm
   cmake:
     version: [3.9.6]
     variants: ~openssl~ncurses
-  perl:
-    buildable: False
-    paths:
-      perl: /usr
   pkg-config:
       buildable: False
       paths:
           pkg-config: /usr
-# LLNL toss3 CUDA 
-  cuda:
-    modules:
-       cuda@9.1: cuda/9.1.85
-    buildable: False
-# LLNL toss3 mvapich2
   mvapich2:
     paths:
-      mvapich2@2.2%gcc@4.9.3:  /usr/tce/packages/mvapich2/mvapich2-2.2-gcc-4.9.3
-      mvapich2@2.2%intel@17.0.0: /usr/tce/packages/mvapich2/mvapich2-2.2-intel-17.0.0
-      mvapich2@2.2%clang@4.0.0: /usr/tce/packages/mvapich2/mvapich2-2.2-clang-4.0.0
+      # clang mvapich2
+      mvapich2@2.2 %clang@3.9.1 arch=linux-rhel7-x86_64: /usr/tce/packages/mvapich2/mvapich2-2.2-clang-3.9.1
+      mvapich2@2.2 %clang@4.0.0 arch=linux-rhel7-x86_64: /usr/tce/packages/mvapich2/mvapich2-2.2-clang-4.0.0
+      # gcc mvapich2
+      mvapich2@2.2 %gcc@7.3.0 arch=linux-rhel7-x86_64: /usr/tce/packages/mvapich2/mvapich2-2.2-gcc-7.3.0
+      mvapich2@2.2 %gcc@8.1.0 arch=linux-rhel7-x86_64: /usr/tce/packages/mvapich2/mvapich2-2.2-gcc-8.1.0
+      # intel mvapich2
+      mvapich2@2.2 %intel@16.0.4 arch=linux-rhel7-x86_64: /usr/tce/packages/mvapich2/mvapich2-2.2-intel-16.0.4
+      mvapich2@2.2 %intel@18.0.2 arch=linux-rhel7-x86_64: /usr/tce/packages/mvapich2/mvapich2-2.2-intel-18.0.2
     buildable: False
