--- a/scripts/uberenv/project.json
+++ b/scripts/uberenv/project.json
@@ -1,7 +1,7 @@
 {
 "package_name" : "serac",
 "uberenv_package_name" : "uberenv-serac",
-"spack_url": "https://github.com/alpine-DAV/spack",
-"spack_branch": "task/2019_01_update_ascent",
+"spack_url": "https://github.com/spack/spack",
+"spack_branch": "develop",
 "spack_activate" : {}
 }
