Dropping MFEM dependencies
This commit uses to ascent setupMFEM.cmake to retrieve MFEM
dependencies when installed with its Makefile build system.

--- a/src/coefficients/CMakeLists.txt
+++ b/src/coefficients/CMakeLists.txt
@@ -17,7 +17,8 @@ blt_add_library(
     NAME        coefficients
     SOURCES     ${coefficients_sources}
     HEADERS     ${coefficients_headers}
-    DEPENDS_ON  mpi mfem hypre blas lapack parmetis metis
+    DEPENDS_ON  mfem mpi
+    #DEPENDS_ON  mpi mfem hypre blas lapack parmetis metis
     )
 
 target_include_directories(coefficients PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
