--- a/src/integrators/CMakeLists.txt
+++ b/src/integrators/CMakeLists.txt
@@ -18,7 +18,8 @@ blt_add_library(
     NAME        integrators
     SOURCES     ${integrators_sources}
     HEADERS     ${integrators_headers}
-    DEPENDS_ON  mpi mfem hypre blas lapack parmetis metis 
+    DEPENDS_ON  mfem mpi
+    #DEPENDS_ON  mpi mfem hypre blas lapack parmetis metis 
     )
 
 target_include_directories(integrators PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
