--- a/.gitlab/ci/build_quartz.yml
+++ b/.gitlab/ci/build_quartz.yml
@@ -56,6 +56,14 @@ release_resources_build_quartz:
   stage: test
 
 ####
+# Generic qwartz job, extending clean script
+.clean_quartz:
+  extends:
+    - .quartz_common
+    - .clean_toss_3_x86_64_ib_script
+  stage: clean
+
+####
 # Here are all quartz build jobs
 
 dependencies_quartz_clang_3_9_1:
@@ -145,3 +153,42 @@ build_quartz_intel_18_0_2:
 ####
 # Here are all quartz tests jobs
 
+####
+# Here are all quartz clean jobs
+
+clean_quartz_clang_3_9_1:
+  variables:
+    COMPILER: "clang_3_9_1"
+    SPEC: "%clang@3.9.1"
+  extends: .clean_quartz
+  allow_failure: true
+
+clean_quartz_clang_4_0_0:
+  variables:
+    COMPILER: "clang_4_0_0"
+    SPEC: "%clang@4.0.0"
+  extends: .clean_quartz
+  allow_failure: true
+
+clean_quartz_gcc_7_3_0:
+  variables:
+    COMPILER: "gcc_7_3_0"
+    SPEC: "%gcc@7.3.0"
+  extends: .clean_quartz
+
+clean_quartz_gcc_8_1_0:
+  variables:
+    COMPILER: "gcc_8_1_0"
+    SPEC: "%gcc@8.1.0"
+  extends: .clean_quartz
+
+#clean_quartz_intel_16_0_4:
+#  variables:
+#    COMPILER: "intel_16_0_4"
+#  extends: .clean_quartz
+
+clean_quartz_intel_18_0_2:
+  variables:
+    COMPILER: "intel_18_0_2"
+    SPEC: "%intel@18.0.2"
+  extends: .clean_quartz
