Do not use Uberenv in clean stage:
Uberenv clean command is meant to clean spack before install.
So it preceed with install. Changing this behavior requires
changing the way the script is intended :
Uberenv has 2 execution paths, install dependencies, install
dependencies and package.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,7 +64,8 @@ stages:
 
 .clean_toss_3_x86_64_ib_script:
   script:
-    - python scripts/uberenv/uberenv.py --prefix=${INSTALL_ROOT}_${COMPILER} --spec=${SPEC} --clean
+    - rm -rf ${INSTALL_ROOT}_{COMPILER}
+      #    - python scripts/uberenv/uberenv.py --prefix=${INSTALL_ROOT}_${COMPILER} --spec=${SPEC} --clean
 
 # This is where jobs are included
 include:
