--- a/.gitlab/ci/build_quartz.yml
+++ b/.gitlab/ci/build_quartz.yml
@@ -61,33 +61,33 @@ release_resources_build_quartz:
 dependencies_quartz_clang_3_9_1:
   variables:
     COMPILER: "clang_3_9_1"
-    SPEC: "%clang@3.9.1"
+    SPEC: "@develop%clang@3.9.1"
   extends: .dependencies_quartz
   allow_failure: true
 
 dependencies_quartz_clang_4_0_0:
   variables:
     COMPILER: "clang_4_0_0"
-    SPEC: "%clang@4.0.0"
+    SPEC: "@develop%clang@4.0.0"
   extends: .dependencies_quartz
   allow_failure: true
 
 dependencies_quartz_gcc_7_3_0:
   variables:
     COMPILER: "gcc_7_3_0"
-    SPEC: "%gcc@7.3.0"
+    SPEC: "@develop%gcc@7.3.0"
   extends: .dependencies_quartz
 
 dependencies_quartz_gcc_8_1_0:
   variables:
     COMPILER: "gcc_8_1_0"
-    SPEC: "%gcc@8.1.0"
+    SPEC: "@develop%gcc@8.1.0"
   extends: .dependencies_quartz
 
 dependencies_quartz_intel_18_0_2:
   variables:
     COMPILER: "intel_18_0_2"
-    SPEC: "%intel@18.0.2"
+    SPEC: "@develop%intel@18.0.2"
   extends: .dependencies_quartz
 
 ####
@@ -97,7 +97,7 @@ build_quartz_clang_3_9_1:
   needs: ["dependencies_quartz_clang_3_9_1"]
   variables:
     COMPILER: "clang_3_9_1"
-    SPEC: "%clang@3.9.1"
+    SPEC: "@develop%clang@3.9.1"
   extends: .build_quartz
   allow_failure: true
 
@@ -105,7 +105,7 @@ build_quartz_clang_4_0_0:
   needs: ["dependencies_quartz_clang_4_0_0"]
   variables:
     COMPILER: "clang_4_0_0"
-    SPEC: "%clang@4.0.0"
+    SPEC: "@develop%clang@4.0.0"
   extends: .build_quartz
   allow_failure: true
 
@@ -113,21 +113,21 @@ build_quartz_gcc_7_3_0:
   needs: ["dependencies_quartz_gcc_7_3_0"]
   variables:
     COMPILER: "gcc_7_3_0"
-    SPEC: "%gcc@7.3.0"
+    SPEC: "@develop%gcc@7.3.0"
   extends: .build_quartz
 
 build_quartz_gcc_8_1_0:
   needs: ["dependencies_quartz_gcc_8_1_0"]
   variables:
     COMPILER: "gcc_8_1_0"
-    SPEC: "%gcc@8.1.0"
+    SPEC: "@develop%gcc@8.1.0"
   extends: .build_quartz
 
 build_quartz_intel_18_0_2:
   needs: ["dependencies_quartz_intel_18_0_2"]
   variables:
     COMPILER: "intel_18_0_2"
-    SPEC: "%intel@18.0.2"
+    SPEC: "@develop%intel@18.0.2"
   extends: .build_quartz
 
 ####
@@ -136,31 +136,31 @@ build_quartz_intel_18_0_2:
 clean_quartz_clang_3_9_1:
   variables:
     COMPILER: "clang_3_9_1"
-    SPEC: "%clang@3.9.1"
+    SPEC: "@develop%clang@3.9.1"
   extends: .clean_quartz
   allow_failure: true
 
 clean_quartz_clang_4_0_0:
   variables:
     COMPILER: "clang_4_0_0"
-    SPEC: "%clang@4.0.0"
+    SPEC: "@develop%clang@4.0.0"
   extends: .clean_quartz
   allow_failure: true
 
 clean_quartz_gcc_7_3_0:
   variables:
     COMPILER: "gcc_7_3_0"
-    SPEC: "%gcc@7.3.0"
+    SPEC: "@develop%gcc@7.3.0"
   extends: .clean_quartz
 
 clean_quartz_gcc_8_1_0:
   variables:
     COMPILER: "gcc_8_1_0"
-    SPEC: "%gcc@8.1.0"
+    SPEC: "@develop%gcc@8.1.0"
   extends: .clean_quartz
 
 clean_quartz_intel_18_0_2:
   variables:
     COMPILER: "intel_18_0_2"
-    SPEC: "%intel@18.0.2"
+    SPEC: "@develop%intel@18.0.2"
   extends: .clean_quartz
