--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
-  BUILD_QUARTZ_ALLOC_NAME: serac_$CI_COMMIT_SHORT_SHA
+  SLURM_ALLOC_NAME: serac_$CI_COMMIT_SHORT_SHA
   BUILD_ROOT: $CI_BUILDS_DIR/serac_$CI_COMMIT_REF_SLUG
   INSTALL_ROOT: $CI_BUILDS_DIR/spack_uberenv
   SPACK_UPSTREAM: /usr/workspace/radiuss/spack-chain-parent/opt/spack
@@ -25,10 +25,10 @@ stages:
   - release_resources
   - clean
 
-.install_dependencies_script:
+.dependencies_toss_3_x86_64_ib_script:
   script:
-    - echo ${BUILD_QUARTZ_ALLOC_NAME}
-    - export JOBID=$(squeue -h --name=${BUILD_QUARTZ_ALLOC_NAME} --format=%A)
+    - echo ${SLURM_ALLOC_NAME}
+    - export JOBID=$(squeue -h --name=${SLURM_ALLOC_NAME} --format=%A)
     - echo ${JOBID}
     - srun $( [[ -n "${JOBID}" ]] && echo "--jobid=${JOBID}" ) -t 20 -N 1 -n 1 -c 4 python scripts/uberenv/uberenv.py --prefix=${INSTALL_ROOT}_${COMPILER} --spec=${SPEC} --upstream=${SPACK_UPSTREAM}
 
@@ -36,23 +36,18 @@ stages:
 # If an allocation exist with the name defined in this pipeline, the job will use it
 .build_toss_3_x86_64_ib_script:
   script:
-    - echo ${BUILD_QUARTZ_ALLOC_NAME}
-    - export JOBID=$(squeue -h --name=${BUILD_QUARTZ_ALLOC_NAME} --format=%A)
+    - echo ${SLURM_ALLOC_NAME}
+    - export JOBID=$(squeue -h --name=${SLURM_ALLOC_NAME} --format=%A)
     - echo ${JOBID}
     - srun $( [[ -n "${JOBID}" ]] && echo "--jobid=${JOBID}" ) -t 5 -N 1 -n 1 -c 4 scripts/gitlab/build_and_test.sh --build-only
 
 # This is not a job, but contains project specific build commands
 .test_toss_3_x86_64_ib_script:
   script:
-    - echo ${BUILD_QUARTZ_ALLOC_NAME}
-    - export JOBID=$(squeue -h --name=${BUILD_QUARTZ_ALLOC_NAME} --format=%A)
+    - echo ${SLURM_ALLOC_NAME}
+    - export JOBID=$(squeue -h --name=${SLURM_ALLOC_NAME} --format=%A)
     - echo ${JOBID}
     - srun $( [[ -n "${JOBID}" ]] && echo "--jobid=${JOBID}" ) -t 5 -N 1 -n 1 -c 4 scripts/gitlab/build_and_test.sh --test-only
-  after_script:
-    - scripts/gitlab/after_test.sh
-  artifacts:
-    reports:
-      junit: test.xml
 
 # Butte uses a very different job allocation system, building on login nodes is recommended
 .build_blueos_3_ppc64le_ib_script:
@@ -65,12 +60,9 @@ stages:
 .clean_toss_3_x86_64_ib_script:
   script:
     - rm -rf ${INSTALL_ROOT}_{COMPILER}
-      #    - python scripts/uberenv/uberenv.py --prefix=${INSTALL_ROOT}_${COMPILER} --spec=${SPEC} --clean
 
 # This is where jobs are included
 include:
   - local: .gitlab/ci/build_quartz.yml
-    #- local: .gitlab/ci/build_butte.yml
-    #- local: .gitlab/ci/build_lassen.yml
 
 
