Adding check for vdim ordering when using boomer and first step toward a line search

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,4 +8,4 @@ add_subdirectory(solvers)
 add_subdirectory(integrators)
 add_subdirectory(coefficients)
 add_subdirectory(drivers)
-
+add_subdirectory(linalg)
