--- a/scripts/uberenv/spack_configs/config.yaml
+++ b/scripts/uberenv/spack_configs/config.yaml
@@ -16,9 +16,12 @@
 config:
   # This is the path to the root of the Spack install tree.
   # You can use $spack here to refer to the root of the spack instance.
-  install_tree: $spack/opt/spack
+  install_tree: $spack/..
 
-  # Locations where templates should be found
+  # install directory layout
+  install_path_scheme: "${COMPILERNAME}-${COMPILERVER}/${PACKAGE}-${VERSION}"
+
+# Locations where templates should be found
   template_dirs:
     - $spack/templates
 
