--- a/scripts/uberenv/spack_configs/toss_3_x86_64_ib/packages.yaml
+++ b/scripts/uberenv/spack_configs/toss_3_x86_64_ib/packages.yaml
@@ -2,16 +2,10 @@ packages:
   all:
     compiler: [gcc, intel, pgi, clang, xl, nag]
     providers:
-      blas: [openblas]
-      lapack: [openblas]
+      blas: [netlib-lapack]
+      lapack: [netlib-lapack]
       mpi: [mvapich2]
-  cmake:
-    version: [3.9.6]
-    variants: ~openssl~ncurses
-  pkg-config:
-      buildable: False
-      paths:
-          pkg-config: /usr
+  # Lock down which MPI we are using
   mvapich2:
     paths:
       # clang mvapich2
@@ -44,3 +38,76 @@ packages:
     buildable: False
   mpt:
     buildable: False
+
+  # Lock down versions of packages we depend on
+  cmake:
+    version: [3.9.2]
+    paths:
+      cmake: /usr/tce/packages/cmake/cmake-3.9.2
+    buildable: False
+
+  mfem:
+    version: [4.0.0]
+  hypre:
+    version: [2.15.1]
+  superlu-dist:
+    version: [6.1.1]
+  parmetis:
+    version: [4.0.3]
+  metis:
+    version: [5.1.0]
+
+  # blas is a bit more complicated because its a virtual package so fake it with
+  # the following per spack docs
+  netlib-lapack:
+    paths:
+      netlib-lapack@3.6.1: /usr
+    buildable: False
+
+# System level packages to not build
+  autoconf:
+    paths:
+      autoconf: /usr
+    buildable: False 
+  automake:
+    paths:
+      automake: /usr
+    buildable: False
+  bzip2:
+   paths:
+      bzip2: /usr
+   buildable: False
+  gettext:
+   paths:
+      gettext: /usr
+   buildable: False
+  libiconv:
+   paths:
+      libiconv: /usr
+   buildable: False
+  libtool:
+   paths:
+      libtool: /usr
+   buildable: False
+  m4:
+   paths:
+      m4: /usr
+   buildable: False
+  perl:
+    paths:
+      perl: /usr
+    buildable: False 
+  pkg-config:
+    paths:
+      pkg-config: /usr
+    buildable: False 
+  tar:
+   paths:
+      tar: /usr
+   buildable: False
+  graphviz:
+    paths:
+      graphviz: /usr
+    buildable: False
+
+
