--- a/scripts/uberenv/project.json
+++ b/scripts/uberenv/project.json
@@ -4,6 +4,6 @@
 "package_final_phase" : "hostconfig",
 "package_source_dir" : "../..",
 "spack_url": "https://github.com/spack/spack",
-"spack_branch": "develop",
+"spack_commit": "d98b433a3c14af5aaba03fd439f6e47cb970bac6",
 "spack_activate" : {}
 }
