The linear elastic solver now compiles

--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -8,12 +8,14 @@ set(solvers_sources
     quasistatic_solver.cpp
     dynamic_solver.cpp
     conduction_solver.cpp
+    linear_elasticity_solver.cpp
     )
 
 set(solvers_headers
     quasistatic_solver.hpp
     dynamic_solver.hpp
     conduction_solver.hpp
+    linear_elasticity_solver.hpp
     )
 
 blt_add_library(
