Lock hypre at earlier version, remove cli remnants

--- a/scripts/uberenv/spack_configs/config.yaml
+++ b/scripts/uberenv/spack_configs/config.yaml
@@ -45,8 +45,7 @@ config:
   build_stage:
     # skipping tempdir b/c running mpi tests fails with local fs
     # - $tempdir
-    - /nfs/tmp2/$user
-    - $spack/var/spack/stage
+    - $spack/../builds
 
 
   # Cache directory already downloaded source tarballs and archived
