--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ set( serac_tests
      serac_quasistatic_solver.cpp
      serac_dynamic_solver.cpp
      serac_conduction_solver.cpp
+     serac_linelastic_solver.cpp
      )
 
 foreach ( test ${serac_tests} )
