--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ variables:
   GIT_SUBMODULE_STRATEGY: recursive
   SLURM_ALLOC_NAME: serac_$CI_COMMIT_SHORT_SHA
   BUILD_ROOT: $CI_BUILDS_DIR/serac_$CI_COMMIT_REF_SLUG
+  LIBS_ROOT: $CI_BUILDS_DIR/serac_libs_$CI_COMMIT_REF_SLUG
   INSTALL_ROOT: $CI_BUILDS_DIR/spack_uberenv
-  SPACK_UPSTREAM: /usr/workspace/radiuss/spack-chain-parent/opt/spack
   SPACK_MIRROR: /usr/workspace/radiuss/mirrors/packages
 
 before_script:
@@ -40,8 +40,9 @@ setup_env:
     - echo ${SLURM_ALLOC_NAME}
     - export JOBID=$(squeue -h --name=${SLURM_ALLOC_NAME} --format=%A)
     - echo ${JOBID}
-    - srun $( [[ -n "${JOBID}" ]] && echo "--jobid=${JOBID}" ) -t 20 -N 1 -n 1 -c 4 python scripts/uberenv/uberenv.py --mirror=${SPACK_MIRROR} --prefix=${INSTALL_ROOT}_${COMPILER} --spec=${SPEC} --upstream=${SPACK_UPSTREAM}
-    - mv ${CI_PROJECT_DIR}/${SYS_TYPE}__${COMPILER}__serac.cmake ${BUILD_ROOT}
+    - rm -rf ${LIBS_ROOT}
+    - srun $( [[ -n "${JOBID}" ]] && echo "--jobid=${JOBID}" ) -t 20 -N 1 -n 1 -c 4 python scripts/uberenv/uberenv.py --mirror=${SPACK_MIRROR} --prefix=${LIBS_ROOT} --spec=${SPEC}
+    - mv ${LIBS_ROOT}/${COMPILER}.cmake ${BUILD_ROOT}
 
 # This is not a job, but contains project specific build commands
 # If an allocation exist with the name defined in this pipeline, the job will use it
