--- a/.gitlab/ci/build_quartz.yml
+++ b/.gitlab/ci/build_quartz.yml
@@ -30,7 +30,7 @@ release_resources_build_quartz:
   when: always
 
 ####
-# Generic qwartz jobs
+# Generic quartz jobs
 .dependencies_quartz:
   extends:
     - .quartz_common
@@ -58,103 +58,65 @@ release_resources_build_quartz:
 ####
 # Here are all quartz dependencies jobs
 
-dependencies_quartz_clang_3_9_1:
-  variables:
-    COMPILER: "clang_3_9_1"
-    SPEC: "@develop%clang@3.9.1"
-  extends: .dependencies_quartz
-
 dependencies_quartz_clang_4_0_0:
   variables:
-    COMPILER: "clang_4_0_0"
-    SPEC: "@develop%clang@4.0.0"
-  extends: .dependencies_quartz
-
-dependencies_quartz_gcc_7_3_0:
-  variables:
-    COMPILER: "gcc_7_3_0"
-    SPEC: "@develop%gcc@7.3.0"
+    COMPILER: "clang@4.0.0"
+    SPEC: "@develop%${COMPILER}"
   extends: .dependencies_quartz
 
 dependencies_quartz_gcc_8_1_0:
   variables:
-    COMPILER: "gcc_8_1_0"
-    SPEC: "@develop%gcc@8.1.0"
+    COMPILER: "gcc@8.1.0"
+    SPEC: "@develop%${COMPILER}"
   extends: .dependencies_quartz
 
-dependencies_quartz_intel_18_0_2:
+dependencies_quartz_intel_19_0_4:
   variables:
-    COMPILER: "intel_18_0_2"
-    SPEC: "@develop%intel@18.0.2"
+    COMPILER: "intel@19.0.4"
+    SPEC: "@develop%${COMPILER}"
   extends: .dependencies_quartz
 
 ####
 # Here are all quartz build jobs
 
-build_quartz_clang_3_9_1:
-  needs: ["dependencies_quartz_clang_3_9_1"]
-  variables:
-    COMPILER: "clang_3_9_1"
-    SPEC: "@develop%clang@3.9.1"
-  extends: .build_quartz
-
 build_quartz_clang_4_0_0:
   needs: ["dependencies_quartz_clang_4_0_0"]
   variables:
-    COMPILER: "clang_4_0_0"
-    SPEC: "@develop%clang@4.0.0"
-  extends: .build_quartz
-
-build_quartz_gcc_7_3_0:
-  needs: ["dependencies_quartz_gcc_7_3_0"]
-  variables:
-    COMPILER: "gcc_7_3_0"
-    SPEC: "@develop%gcc@7.3.0"
+    COMPILER: "clang@4.0.0"
+    SPEC: "@develop%${COMPILER}"
   extends: .build_quartz
 
 build_quartz_gcc_8_1_0:
   needs: ["dependencies_quartz_gcc_8_1_0"]
   variables:
-    COMPILER: "gcc_8_1_0"
-    SPEC: "@develop%gcc@8.1.0"
+    COMPILER: "gcc@8.1.0"
+    SPEC: "@develop%${COMPILER}"
   extends: .build_quartz
 
 build_quartz_intel_18_0_2:
-  needs: ["dependencies_quartz_intel_18_0_2"]
+  needs: ["dependencies_quartz_intel_19_0_4"]
   variables:
-    COMPILER: "intel_18_0_2"
-    SPEC: "@develop%intel@18.0.2"
+    COMPILER: "intel@19.0.4"
+    SPEC: "@develop%${COMPILER}"
   extends: .build_quartz
 
 ####
 # Here are all quartz tests jobs
 
-clean_quartz_clang_3_9_1:
-  variables:
-    COMPILER: "clang_3_9_1"
-    SPEC: "@develop%clang@3.9.1"
-  extends: .clean_quartz
-
 clean_quartz_clang_4_0_0:
   variables:
-    COMPILER: "clang_4_0_0"
-    SPEC: "@develop%clang@4.0.0"
-  extends: .clean_quartz
-
-clean_quartz_gcc_7_3_0:
-  variables:
-    COMPILER: "gcc_7_3_0"
-    SPEC: "@develop%gcc@7.3.0"
+    COMPILER: "clang@4.0.0"
+    SPEC: "@develop%${COMPILER}"
   extends: .clean_quartz
 
 clean_quartz_gcc_8_1_0:
   variables:
-    COMPILER: "gcc_8_1_0"
-    SPEC: "@develop%gcc@8.1.0"
+    COMPILER: "gcc@8.1.0"
+    SPEC: "@develop%${COMPILER}"
   extends: .clean_quartz
 
-clean_quartz_intel_18_0_2:
+clean_quartz_intel_19_0_4:
   variables:
-    COMPILER: "intel_18_0_2"
-    SPEC: "@develop%intel@18.0.2"
+    COMPILER: "intel@19.0.4"
+    SPEC: "@develop%${COMPILER}"
   extends: .clean_quartz
