Move checks to higher level so it doesn't fail per directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,3 +65,11 @@ add_subdirectory(src)
 if(ENABLE_TESTS)
     add_subdirectory(tests)
 endif()
+
+#------------------------------------------------------------------------------
+# Add Code Checks
+#------------------------------------------------------------------------------
+
+serac_add_code_checks(PREFIX   serac
+                      INCLUDES src tests
+                      EXCLUDES cmake/blt)
