--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -5,6 +5,7 @@
 # SPDX-License-Identifier: (BSD-3-Clause) 
 
 set(solvers_sources
+    base_solver.cpp
     quasistatic_solver.cpp
     dynamic_solver.cpp
     conduction_solver.cpp
@@ -12,6 +13,7 @@ set(solvers_sources
     )
 
 set(solvers_headers
+    base_solver.hpp
     quasistatic_solver.hpp
     dynamic_solver.hpp
     conduction_solver.hpp
@@ -22,7 +24,7 @@ blt_add_library(
     NAME        solvers
     SOURCES     ${solvers_sources}
     HEADERS     ${solvers_headers}
-    DEPENDS_ON  mfem integrators mpi
+    DEPENDS_ON  mfem integrators common mpi
     )
 
 target_include_directories(solvers PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
