Added linear solver parameters types and destructors for the solver objects

--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -8,7 +8,7 @@ set(solvers_sources
     base_solver.cpp
     quasistatic_solver.cpp
     dynamic_solver.cpp
-    conduction_solver.cpp
+    thermal_solver.cpp
     linear_elasticity_solver.cpp
     )
 
@@ -16,7 +16,7 @@ set(solvers_headers
     base_solver.hpp
     quasistatic_solver.hpp
     dynamic_solver.hpp
-    conduction_solver.hpp
+    thermal_solver.hpp
     linear_elasticity_solver.hpp
     )
 
