--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -6,7 +6,7 @@
 
 set(solvers_sources
     base_solver.cpp
-    quasistatic_solver.cpp
+    nonlinear_solid_solver.cpp
     dynamic_solver.cpp
     thermal_solver.cpp
     elasticity_solver.cpp
@@ -14,7 +14,7 @@ set(solvers_sources
 
 set(solvers_headers
     base_solver.hpp
-    quasistatic_solver.hpp
+    nonlinear_solid_solver.hpp
     dynamic_solver.hpp
     thermal_solver.hpp
     elasticity_solver.hpp
