--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 ##############################################################################
-# Copyright (c) 2016-19, Lawrence Livermore National Security, LLC and Serac
-# project contributors. See the COPYRIGHT file for details.
+# Copyright (c) 2019-2020, Lawrence Livermore National Security, LLC and Serac
+# project contributors. See the LICENSE file for details.
 ##############################################################################
 
 variables:
