Fixing the dates for the copyright

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 ##############################################################################
-# Copyright (c) 2019-2020, Lawrence Livermore National Security, LLC and Serac
+# Copyright (c) 2019-2020-2020, Lawrence Livermore National Security, LLC and Serac
 # project contributors. See the LICENSE file for details.
 ##############################################################################
 
