Adding glvis to the spack build

--- a/scripts/uberenv/spack_configs/toss_3_x86_64_ib/packages.yaml
+++ b/scripts/uberenv/spack_configs/toss_3_x86_64_ib/packages.yaml
@@ -53,6 +53,8 @@ packages:
     version: [4.0.3]
   metis:
     version: [5.1.0]
+  glvis:
+    version: [3.4]
 
   # blas is a bit more complicated because its a virtual package so fake it with
   # the following per spack docs
