More monkeying around with spack

--- a/scripts/uberenv/spack_configs/toss_3_x86_64_ib/packages.yaml
+++ b/scripts/uberenv/spack_configs/toss_3_x86_64_ib/packages.yaml
@@ -5,6 +5,8 @@ packages:
       blas: [netlib-lapack]
       lapack: [netlib-lapack]
       mpi: [mvapich2]
+      gl: [opengl]
+      glu: [openglu]
   # Lock down which MPI we are using
   mvapich2:
     paths:
@@ -14,6 +16,14 @@ packages:
       mvapich2@2.2 %gcc@8.1.0 arch=linux-rhel7-x86_64: /usr/tce/packages/mvapich2/mvapich2-2.2-gcc-8.1.0
       # intel mvapich2
       mvapich2@2.2 %intel@19.0.4 arch=linux-rhel7-x86_64: /usr/tce/packages/mvapich2/mvapich2-2.2-intel-19.0.4
+    buildable: False
+  opengl:
+    paths:
+      opengl@0.0.0: /usr/lib64
+    buildable: False
+  openglu:
+    paths:
+      openglu@0.0.0: /usr/lib64
     buildable: False
   openmpi:
     buildable: False
@@ -104,5 +114,7 @@ packages:
     paths:
       graphviz: /usr
     buildable: False
-
-
+  libx11:
+    paths:
+      libx11: /usr
+    buildable: False
