--- a/scripts/uberenv/spack_configs/toss_3_x86_64_ib/packages.yaml
+++ b/scripts/uberenv/spack_configs/toss_3_x86_64_ib/packages.yaml
@@ -19,11 +19,11 @@ packages:
     buildable: False
   opengl:
     paths:
-      opengl@0.0.0: /usr/lib64
+      opengl@1.7.0: /usr
     buildable: False
   openglu:
     paths:
-      openglu@0.0.0: /usr/lib64
+      openglu@1.3.1: /usr
     buildable: False
   openmpi:
     buildable: False
