--- a/scripts/uberenv/spack_configs/toss_3_x86_64_ib/packages.yaml
+++ b/scripts/uberenv/spack_configs/toss_3_x86_64_ib/packages.yaml
@@ -18,14 +18,12 @@ packages:
       mvapich2@2.2 %intel@19.0.4 arch=linux-rhel7-x86_64: /usr/tce/packages/mvapich2/mvapich2-2.2-intel-19.0.4
     buildable: False
   opengl:
-    version: [1.7.0]
     paths:
-      opengl: /usr
+      opengl@1.7.0: /usr
     buildable: False
   openglu:
-    version: [1.3.1]
     paths:
-      openglu: /usr
+      openglu@1.3.1: /usr
     buildable: False
   openmpi:
     buildable: False
