--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,3 +11,7 @@ sphinx:
 
 # Optionally build your docs in additional formats such as PDF and ePub
 formats: all
+
+# Optionally set the version of Python and requirements required to build your docs
+python:
+  version: 2.7
