added destructor test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -67,4 +67,18 @@ if (ENABLE_GTEST)
         NUM_MPI_TASKS     4
         WORKING_DIRECTORY ${TEST_OUTPUT_DIRECTORY} )
 
+    #----------------------
+    # Deconstructor test
+    #----------------------
+    blt_add_executable(
+        NAME       serac_dtor
+        SOURCES    serac_dtor.cpp
+        OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
+        DEPENDS_ON solvers mpi mfem gtest )
+    blt_add_test(
+        NAME              serac_dtor
+        COMMAND           serac_dtor
+        NUM_MPI_TASKS     4
+        WORKING_DIRECTORY ${TEST_OUTPUT_DIRECTORY} )
+
 endif()
