--- a/scripts/uberenv/spack_configs/linux-ubuntu18.04-broadwell/packages.yaml
+++ b/scripts/uberenv/spack_configs/linux-ubuntu18.04-broadwell/packages.yaml
@@ -24,11 +24,11 @@ packages:
     version: [3.4]
   opengl:
     paths:
-      opengl@1.0.0: /usr/lib/x86_64-linux-gnu
+      opengl@1.0.0: /usr
     buildable: False
   openglu:
     paths:
-      openglu@1.3.1: /usr/lib/x86_64-linux-gnu
+      openglu@1.3.1: /usr
     buildable: False
 # System level packages to not build
   bzip2:
