--- a/scripts/uberenv/spack_configs/toss_3_x86_64_ib/packages.yaml
+++ b/scripts/uberenv/spack_configs/toss_3_x86_64_ib/packages.yaml
@@ -1,5 +1,7 @@
 packages:
   all:
+    # This defaults us to machine specific flags of ivybridge which is allows us to run on broadwell as well
+    target: [ivybridge]
     compiler: [gcc, intel, pgi, clang, xl, nag]
     providers:
       blas: [netlib-lapack]
