--- a/src/integrators/CMakeLists.txt
+++ b/src/integrators/CMakeLists.txt
@@ -6,12 +6,14 @@
 
 set(integrators_sources
     hyperelastic_traction_integrator.cpp
-    inc_hyperelastic_integrator.cpp    
+    inc_hyperelastic_integrator.cpp
+    wrapper_integrator.cpp
     )
 
 set(integrators_headers
     hyperelastic_traction_integrator.hpp
-    inc_hyperelastic_integrator.hpp    
+    inc_hyperelastic_integrator.hpp
+    wrapper_integrator.hpp
     )
 
 blt_add_library(
