--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -67,4 +67,14 @@ if (ENABLE_GTEST)
         NUM_MPI_TASKS     4
         WORKING_DIRECTORY ${TEST_OUTPUT_DIRECTORY} )
 
+    #----------------------
+    # Wrapper Unit tests
+    #----------------------
+    blt_add_executable(
+        NAME       wrapper_tests
+        SOURCES    wrapper_tests.cpp
+        OUTPUT_DIR ${TEST_OUTPUT_DIRECTORY}
+        DEPENDS_ON solvers mpi mfem gtest )
+
+
 endif()
