Added unit tests for StdFunctionCoefficients, and attribute and essential boundary condition infastructure

--- a/src/coefficients/CMakeLists.txt
+++ b/src/coefficients/CMakeLists.txt
@@ -6,11 +6,13 @@
 
 set(coefficients_sources
     loading_functions.cpp
+    StdFunctionCoefficient.cpp
     )
 
 set(coefficients_headers
     loading_functions.hpp
     traction_coefficient.hpp
+    StdFunctionCoefficient.hpp
     )
 
 blt_add_library(
