--- a/src/coefficients/CMakeLists.txt
+++ b/src/coefficients/CMakeLists.txt
@@ -6,13 +6,13 @@
 
 set(coefficients_sources
     loading_functions.cpp
-    StdFunctionCoefficient.cpp
+    stdfunction_coefficient.cpp
     )
 
 set(coefficients_headers
     loading_functions.hpp
     traction_coefficient.hpp
-    StdFunctionCoefficient.hpp
+    stdfunction_coefficient.hpp
     )
 
 blt_add_library(
