--- a/scripts/uberenv/spack_configs/linux-ubuntu18.04-broadwell/packages.yaml
+++ b/scripts/uberenv/spack_configs/linux-ubuntu18.04-broadwell/packages.yaml
@@ -1,7 +1,7 @@
 packages:
   all:
     target: [ivybridge]
-    compiler: [gcc]
+    compiler: [gcc, clang]
     providers:
       mpi: [mpich, openmpi]
       blas: [openblas]
