--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /build*/
 *.swp
 cmake/defaults.cmake
-/uberenv_libs/
+/uberenv_libs*
 spack-build*
 /src/docs/doxygen/html/
 /src/docs/doxygen/xml/
